feat(ui): 替换亚克力效果为跨平台高斯模糊
移除 Windows 系统级亚克力效果支持，改为使用软高斯模糊效果
更新所有语言文件描述，调整 CSS 变量透明度
删除相关平台检测代码，简化实现逻辑

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -459,8 +459,7 @@
     "font_family": "Schriftart",
     "font_family_desc": "Wähle die Schriftart für die Oberfläche. Einige Schriftarten müssen auf dem System installiert sein",
     "acrylic": "Acryl-Effekt",
-    "acrylic_desc": "Aktiviere den Windows-System-Acrylglaseffekt, kompatibel mit Hintergrundbildern",
-    "acrylic_not_supported": "Acryl-Effekt wird auf diesem System nicht unterstützt",
+    "acrylic_desc": "Aktiviere den weichen Gaußschen Weichzeichnereffekt, unterstützt auf allen Plattformen, kompatibel mit Hintergrundbildern",
     "background": "Hintergrundbild",
     "background_desc": "Lade ein Bild als Software-Hintergrund hoch. Unterstützt PNG, JPG, WEBP und andere Formate",
     "opacity": "Deckkraft",
