--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -545,8 +545,7 @@
     "font_family": "Font",
     "font_family_desc": "Select the font used by the interface, some fonts need to be installed on the system or loaded from the network",
     "acrylic": "Acrylic Effect (Glass)",
-    "acrylic_desc": "Enable Windows system-level acrylic glass effect, compatible with background images",
-    "acrylic_not_supported": "Acrylic effect not supported on current system",
+    "acrylic_desc": "Enable soft Gaussian blur glass effect, supports all platforms, compatible with background images",
     "background": "Background Image",
     "background_desc": "Upload an image as software background, supports PNG, JPG, WEBP and other formats",
     "opacity": "Opacity",
