--- a/src/language/es-ES.json
+++ b/src/language/es-ES.json
@@ -444,8 +444,7 @@
     "font_family": "Fuente",
     "font_family_desc": "Selecciona la fuente. Algunas requieren instalación previa",
     "acrylic": "Efecto acrílico",
-    "acrylic_desc": "Activar efecto de cristal acrílico de Windows. Compatible con imágenes de fondo",
-    "acrylic_not_supported": "El sistema no soporta efecto acrílico",
+    "acrylic_desc": "Activar efecto de desenfoque gaussiano suave, compatible con todas las plataformas e imágenes de fondo",
     "background": "Imagen de fondo",
     "background_desc": "Sube una imagen como fondo. Compatible con PNG, JPG, WEBP",
     "opacity": "Opacidad",
