--- a/src/language/fr-FA.json
+++ b/src/language/fr-FA.json
@@ -462,8 +462,7 @@
     "font_family": "Police",
     "font_family_desc": "Choisissez la police de l'interface. Certaines polices doivent être installées sur le système",
     "acrylic": "Effet acrylique",
-    "acrylic_desc": "Activer l'effet de flou acrylique (Windows uniquement). Compatible avec l'image d'arrière-plan",
-    "acrylic_not_supported": "Votre système ne supporte pas l'effet acrylique",
+    "acrylic_desc": "Activer l'effet de flou gaussien doux, supporté sur toutes les plateformes, compatible avec l'image d'arrière-plan",
     "background": "Image d'arrière-plan",
     "background_desc": "Téléchargez une image d'arrière-plan. Formats supportés : PNG, JPG, WEBP",
     "opacity": "Opacité",
