--- a/src/language/ja-JP.json
+++ b/src/language/ja-JP.json
@@ -460,8 +460,7 @@
     "font_family": "フォント",
     "font_family_desc": "使用するフォントを選択。一部フォントはインストールが必要",
     "acrylic": "アクリル効果",
-    "acrylic_desc": "Windowsのアクリル効果を有効化。背景画像と併用可能",
-    "acrylic_not_supported": "現在のシステムではアクリル効果はサポートされていません",
+    "acrylic_desc": "ソフトガウシアンブラー効果を有効化。全プラットフォーム対応、背景画像と併用可能",
     "background": "背景画像",
     "background_desc": "ソフトウェアの背景画像をアップロード（PNG、JPG、WEBP対応）",
     "opacity": "透明度",
