--- a/src/language/ru-RU.json
+++ b/src/language/ru-RU.json
@@ -459,8 +459,7 @@
     "font_family": "Шрифт",
     "font_family_desc": "Выберите шрифт для интерфейса",
     "acrylic": "Эффект акрила",
-    "acrylic_desc": "Включить эффект матового стекла Windows",
-    "acrylic_not_supported": "Эффект акрила не поддерживается",
+    "acrylic_desc": "Включить эффект мягкого гауссова размытия, поддерживается на всех платформах",
     "background": "Фоновое изображение",
     "background_desc": "Загрузите изображение для фона",
     "opacity": "Прозрачность",
