--- a/src/language/vi-VN.json
+++ b/src/language/vi-VN.json
@@ -459,8 +459,7 @@
     "font_family": "Phông chữ",
     "font_family_desc": "Chọn phông chữ, một số cần cài đặt sẵn",
     "acrylic": "Hiệu ứng mờ",
-    "acrylic_desc": "Bật hiệu ứng mờ của Windows, tương thích với ảnh nền",
-    "acrylic_not_supported": "Hệ thống không hỗ trợ hiệu ứng mờ",
+    "acrylic_desc": "Bật hiệu ứng mờ Gaussian mềm, hỗ trợ mọi nền tảng, tương thích với ảnh nền",
     "background": "Ảnh nền",
     "background_desc": "Tải ảnh lên làm nền, hỗ trợ PNG, JPG, WEBP...",
     "opacity": "Độ trong suốt",
