--- a/src/language/ko-KR.json
+++ b/src/language/ko-KR.json
@@ -462,8 +462,7 @@
     "font_family": "글꼴",
     "font_family_desc": "인터페이스에 사용할 글꼴을 선택합니다. 일부 글꼴은 시스템에 설치되어 있거나 네트워크에서 로드해야 합니다",
     "acrylic": "아크릴 효과 (모서리 흐림)",
-    "acrylic_desc": "Windows 시스템 아크릴 효과를 활성화합니다. 배경 이미지와 함께 사용 가능합니다",
-    "acrylic_not_supported": "현재 시스템은 아크릴 효과를 지원하지 않습니다",
+    "acrylic_desc": "소프트 가우시안 블러 효과를 활성화합니다. 모든 플랫폼 지원, 배경 이미지와 함께 사용 가능",
     "background": "배경 이미지",
     "background_desc": "소프트웨어 배경으로 사용할 이미지를 업로드합니다. PNG, JPG, WEBP 등을 지원합니다",
     "opacity": "불투명도",
