feat(插件管理): 改进插件上传界面并添加来源选择对话框
重构插件上传区域为SLDropzone组件，添加对话框让用户选择插件来源
调整侧边栏和上传区域的样式，优化用户体验
添加中英文翻译文本

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -758,6 +758,8 @@
     "checking": "Checking...",
     "refresh": "Refresh",
     "drag_hint": "Drag ZIP plugin, manifest.json or plugin folder here",
+    "choose_title": "Choose Plugin Source",
+    "choose_description": "Select a plugin ZIP file or a folder containing plugins",
     "select_file": "Select File",
     "select_folder": "Select Folder",
     "loading_plugins": "Loading plugins...",
