feat(about): add official website button and translations

--- a/src/language/es-ES.json
+++ b/src/language/es-ES.json
@@ -586,6 +586,7 @@
     "way_promote": "Promoción",
     "way_promote_desc": "Comparte con más administradores",
     "gitee_repo": "Repositorio Gitee",
+    "official_site": "Sitio oficial",
     "bilibili": "Canal Bilibili",
     "footer_text1": "Sea Lantern es un proyecto de código abierto bajo licencia GPLv3.",
     "footer_text2": "Minecraft es una marca registrada de Mojang Studios. Este proyecto no está afiliado a Mojang.",
