--- a/src/language/ja-JP.json
+++ b/src/language/ja-JP.json
@@ -602,6 +602,7 @@
     "way_promote": "宣伝",
     "way_promote_desc": "より多くのMCサーバー運営者に共有",
     "gitee_repo": "Giteeリポジトリ",
+    "official_site": "公式サイト",
     "bilibili": "Bilibiliページ",
     "footer_text1": "Sea Lanternはオープンソースプロジェクトであり、GPLv3ライセンスに従います。",
     "footer_text2": "MinecraftはMojang Studiosの登録商標です。本プロジェクトはMojangとは無関係です。",
