--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -660,6 +660,7 @@
     "way_promote": "推广",
     "way_promote_desc": "分享给更多 MC 服主",
     "gitee_repo": "Gitee 仓库",
+    "official_site": "官方网站",
     "bilibili": "B站主页",
     "footer_text1": "Sea Lantern 是一个开源项目，遵循 GPLv3 协议。",
     "footer_text2": "Minecraft 是 Mojang Studios 的注册商标。本项目与 Mojang 无关。",
