--- a/src/language/zh-TW.json
+++ b/src/language/zh-TW.json
@@ -604,6 +604,7 @@
     "way_promote": "推廣",
     "way_promote_desc": "分享給更多 MC 服主",
     "gitee_repo": "Gitee 倉庫",
+    "official_site": "官方網站",
     "bilibili": "B站主頁",
     "footer_text1": "Sea Lantern 是一個開源專案，遵循 GPLv3 協議。",
     "footer_text2": "Minecraft 是 Mojang Studios 的註冊商標。本專案與 Mojang 無關。",
