--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -695,6 +695,7 @@
     "way_promote": "Promotion",
     "way_promote_desc": "Share with more MC server owners",
     "gitee_repo": "Gitee Repository",
+    "official_site": "Official Website",
     "bilibili": "Bilibili Channel",
     "footer_text1": "Sea Lantern is an open-source project under GPLv3 license.",
     "footer_text2": "Minecraft is a registered trademark of Mojang Studios. This project is not affiliated with Mojang.",
