--- a/src/language/fr-FA.json
+++ b/src/language/fr-FA.json
@@ -603,6 +603,7 @@
     "way_promote": "Promotion",
     "way_promote_desc": "Partager avec d'autres administrateurs de serveurs Minecraft",
     "gitee_repo": "Dépôt Gitee",
+    "official_site": "Site officiel",
     "bilibili": "Page Bilibili",
     "footer_text1": "Sea Lantern est un projet open source sous licence GPLv3.",
     "footer_text2": "Minecraft est une marque déposée de Mojang Studios. Ce projet n'est pas affilié à Mojang.",
