fix: 插件市场调用浏览器语言而不是i18n语言

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -908,6 +908,7 @@
     "loading": "Loading...",
     "error_title": "Cannot connect to plugin market",
     "retry": "Retry",
+    "refresh": "Refresh",
     "no_plugins": "No plugins found",
     "installing": "Installing...",
     "running_need_disable": "Running (disable first)",
