feat: 添加意大利语界面

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -10,7 +10,8 @@
     "russian": "Russisch",
     "vietnamese": "Vietnamesisch",
     "korean": "Koreanisch",
-    "french": "Französisch"
+    "french": "Französisch",
+    "italian": "Italienisch"
   },
   "common": {
     "app_name": "Sea Lantern",
