--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -10,7 +10,8 @@
     "russian": "Russian",
     "vietnamese": "Vietnamese",
     "korean": "Korean",
-    "french": "French"
+    "french": "French",
+    "italian": "Italian"
   },
   "common": {
     "app_name": "Sea Lantern",
