--- a/src/language/es-ES.json
+++ b/src/language/es-ES.json
@@ -10,7 +10,8 @@
     "russian": "Ruso",
     "vietnamese": "Vietnamita",
     "korean": "Coreano",
-    "french": "Francés"
+    "french": "Francés",
+    "italian": "Italiano"
   },
   "common": {
     "app_name": "Sea Lantern",
