--- a/src/language/fr-FA.json
+++ b/src/language/fr-FA.json
@@ -10,7 +10,8 @@
     "russian": "Russe",
     "vietnamese": "Vietnamien",
     "korean": "Coréen",
-    "french": "Français"
+    "french": "Français",
+    "italian": "Italien"
   },
   "common": {
     "app_name": "Sea Lantern",
