--- a/src/language/ja-JP.json
+++ b/src/language/ja-JP.json
@@ -10,7 +10,8 @@
     "russian": "ロシア語",
     "vietnamese": "ベトナム語",
     "korean": "韓国語",
-    "french": "フランス語"
+    "french": "フランス語",
+    "italian": "イタリア語"
   },
   "common": {
     "app_name": "シーランタン",
