--- a/src/language/ko-KR.json
+++ b/src/language/ko-KR.json
@@ -10,7 +10,8 @@
     "russian": "러시아어",
     "vietnamese": "베트남어",
     "korean": "한국어",
-    "french": "프랑스어"
+    "french": "프랑스어",
+    "italian": "이탈리아어"
   },
   "common": {
     "app_name": "Sea Lantern",
