--- a/src/language/ru-RU.json
+++ b/src/language/ru-RU.json
@@ -10,7 +10,8 @@
     "russian": "Русский",
     "vietnamese": "Вьетнамский",
     "korean": "Корейский",
-    "french": "Французский"
+    "french": "Французский",
+    "italian": "Итальянский"
   },
   "common": {
     "app_name": "Sea Lantern",
