--- a/src/language/vi-VN.json
+++ b/src/language/vi-VN.json
@@ -10,7 +10,8 @@
     "russian": "Tiếng Nga",
     "vietnamese": "Tiếng Việt",
     "korean": "Tiếng Hàn",
-    "french": "Tiếng Pháp"
+    "french": "Tiếng Pháp",
+    "italian": "Tiếng Ý"
   },
   "common": {
     "app_name": "Sea Lantern",
