--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -10,7 +10,8 @@
     "russian": "Русский",
     "vietnamese": "Tiếng Việt",
     "korean": "한국어",
-    "french": "Français"
+    "french": "Français",
+    "italian": "Italiano"
   },
   "common": {
     "app_name": "Sea Lantern",
